[gd_scene load_steps=11 format=3 uid="uid://jaeggyic56rb"]

[ext_resource type="Script" path="res://scripts/firing.gd" id="1_crr5r"]
[ext_resource type="Texture2D" uid="uid://cridl7u47f3jd" path="res://assets/temporary/protractortemp.png" id="2_hpmm0"]
[ext_resource type="Texture2D" uid="uid://bmyga7ykstgt1" path="res://assets/temporary/firingneedletemp.png" id="2_mh6mu"]
[ext_resource type="AudioStream" uid="uid://di64nstvkmo07" path="res://assets/sound/pop_1.mp3" id="4_ocg6v"]
[ext_resource type="Texture2D" uid="uid://chxu4tlof3o4e" path="res://assets/Art Folder/catqpult hand flicking animation frames/contrast_1.png" id="5_vxeuf"]
[ext_resource type="Texture2D" uid="uid://xgxsplbj8bgg" path="res://assets/Art Folder/catqpult hand flicking animation frames/contrast_2.png" id="6_fwt1t"]
[ext_resource type="Texture2D" uid="uid://y3j4rb5f0vnj" path="res://assets/Art Folder/catqpult hand flicking animation frames/contrast_3.png" id="7_lchgo"]
[ext_resource type="Texture2D" uid="uid://c0vbsgvf7d13l" path="res://assets/Art Folder/catqpult hand flicking animation frames/contrast_4.png" id="8_a8ngd"]
[ext_resource type="Texture2D" uid="uid://p85vc50rehbj" path="res://assets/Art Folder/catqpult hand flicking animation frames/contrast_5.png" id="9_p28th"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0mga2"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vxeuf")
}, {
"duration": 1.0,
"texture": ExtResource("6_fwt1t")
}, {
"duration": 1.0,
"texture": ExtResource("7_lchgo")
}, {
"duration": 1.0,
"texture": ExtResource("8_a8ngd")
}, {
"duration": 1.0,
"texture": ExtResource("9_p28th")
}],
"loop": true,
"name": &"flick",
"speed": 5.0
}]

[node name="firing" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_crr5r")

[node name="background" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_hpmm0")
offset = Vector2(2.08165e-12, -145)

[node name="needle" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 3.05176e-05)
scale = Vector2(1.43359, 0.8125)
texture = ExtResource("2_mh6mu")
centered = false
offset = Vector2(2.08165e-12, -120)

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 139.0
offset_top = 58.0
offset_right = 208.0
offset_bottom = 89.0
text = "Launch!
"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = -174.0
offset_top = 58.0
offset_right = -67.0
offset_bottom = 89.0
text = "Start Firing..."
metadata/_edit_use_anchors_ = true

[node name="FiringSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ocg6v")

[node name="hand" type="AnimatedSprite2D" parent="."]
position = Vector2(-68, -100)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_0mga2")
animation = &"flick"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
